# OrtInference

./: .gitignore  CMakeLists.txt  LICENSE  README.md  note.md
assets/input/: 000000007784.json  000000014007.json  000000022371.json  000000058539.json  000000065485.json  000000069795.json  000000086220.json  000000154425.json  000000157807.json  000000162732.json  000000170099.json  000000176232.json  000000182202.json  000000187271.json  000000201775.json  000000210273.json  000000227044.json  000000252701.json  000000292997.json  000000311180.json  000000322968.json  000000345397.json  000000349837.json  000000370208.json  000000382743.json  000000402346.json  000000402473.json  000000429530.json  000000440184.json  000000447917.json  000000450439.json  000000507223.json  000000534601.json  000000558073.json  47B73B908216AE833A5BE43241EB1074.json
include/: GroundDino.h  Model.h  SAM2.h  Yolov10.h  Yolov10SAM.h  Yolov10Trace.h
include/algorithm/: Model.h  PaddleOCR.cpp  PaddleOCR.h  SAM2.cpp  SAM2.h  Yolov10.cpp  Yolov10.h  Yolov10SAM.cpp  Yolov10SAM.h  Yolov10Trace.cpp  Yolov10Trace.h
include/bytetrack/include/: BYTETracker.h  STrack.h  dataType.h
include/bytetrack/include/eigen/: CMakeLists.txt
include/bytetrack/src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp
include/mtool/: mtool.hpp
shell/: infer_cls.py  infer_det.py  infer_rec.py
src/: GroundDino.cpp  SAM2.cpp  Yolov10.cpp  Yolov10SAM.cpp  Yolov10Trace.cpp  main.cpp
